[package]
name = "forte"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
#serde = "1.0.130"
#serde_json = "1.0.67"
serde_json = { version = "1.0.67", default-features = false, features = ["alloc"] }
snake_case = "0.3.1"